--- a/css/photographer.css
+++ b/css/photographer.css
@@ -5,7 +5,7 @@
 .photograph-header {
     background-color: #FAFAFA;
     display: flex;
-    border-radius: 0.32rem;    border-radius: 50%;
+    border-radius: 5px;
 
     height: 19.5rem;
     margin: 2.5rem 0 0.5rem;
@@ -23,6 +23,9 @@
     font-size: 1.25rem;
     font-weight: 700;
     cursor: pointer;
+    margin-right: 4rem;
+    margin-left: 4rem;
+
   }
 
 button {
@@ -62,7 +65,6 @@ button {
 .modal header h2 {
     font-size: 64px;
     font-weight: normal;
-    text-align: center;
 }
 
 form {
@@ -129,6 +131,7 @@ photographer.city{
   .photographer__h1{
       font-size: 3rem;
       color: #d3573c;
+      margin : 0px;
   }
 
   p {
@@ -229,7 +232,28 @@ function extrait(txt, pos) {
 }
 
 .photographerWork{
-    width : 330px;
-    height: 330px;
+    width : 22rem;
+    height: 19rem;
     object-fit: cover;
+    border-radius: 5px;
+}
+
+.card_text {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    color : red;
+    background-color: pink;
+
+}
+.media_coeur {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.heart{
+    align-items: center;
+    color: #901c1c;
+
+
 }
