--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body {
     font-family: "DM Sans", sans-serif;
     margin: 0;
     margin-bottom: 4rem;
+    font-size: 16px;
+    max-width: 1600px;
+}
+a {
+    text-decoration: none;
 }
 
 
@@ -26,7 +31,7 @@ h1 {
 }
 
 .photographerContainer {
-    display: flex;
+    display: flex;}
    /* grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
     margin-top: 100px;
@@ -58,13 +63,8 @@ h1 {
     height: 12,5rem;
 }
 
-h2 {
-    text-align: center;
-    font-weight: 400;
-    font-size: 2.2rem;
-}
 
-???? 
+ 
 h2 {
 
     color: #901C1C;
@@ -93,3 +93,4 @@ h2 {
 
 }
 ???
+
