--- a/css/photographer.css
+++ b/css/photographer.css
@@ -139,10 +139,7 @@ photographer.city{
     text-align: center;
     color: black;
     font-weight: 400;
-    font-size: 0.65rem;
-    padding-bottom: 0.2rem;
     font-size: 1rem;
-    padding-top: 1rem;
     
 }
 
@@ -210,6 +207,7 @@ photographer.city{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-bottom: 25px;
   }
   ???
 /* Modal */
@@ -247,13 +245,15 @@ function extrait(txt, pos) {
 }
 .media_coeur {
     display: flex;
-    align-items: center;
     justify-content: flex-end;
 
 }
 .heart{
-    align-items: center;
     color: #901c1c;
+    margin-top: 2px;
+    margin-left: 5px;
+
+
 
 
 }
