--- a/css/photographer.css
+++ b/css/photographer.css
@@ -215,9 +215,6 @@ photographer.city{
     justify-content: space-around;
     margin-bottom: 25px;
   }
-  ???
-
-}
 /* Modal */
 /*
 Soit texte la variable qui contient la chaîne de caractère et la variable position qui contient la position à partir de laquelle il faut extraire le reste de la chaine de caractères.
@@ -261,15 +258,11 @@ function extrait(txt, pos) {
     margin-top: 2px;
     margin-left: 5px;
 }
-.photographer__selectOption--wraper{
-    background-color: #901c1c;
-    color: #FAFAFA;
-    height: 45px;
-    padding: 10px;
-    margin: 20px;
-}
+
+
+/*
 .lightbox {
-    /*display: none;*/
+    /*display: none;!!!!!!
     width: 100%;
     height: 100%;
     background-color: rgb(255, 255, 255);
@@ -293,3 +286,86 @@ function extrait(txt, pos) {
     color: blue;
     background-color: red;
 }
+*/
+.photographer__selectOption--wraper {
+    background-color: #901c1c;
+    color: #fafafa;
+    height: 45px;
+    padding: 10px;
+    margin: 20px;
+  }
+  
+  
+  .lightbox_container {
+   /* display: none;*/
+    position: fixed;
+    z-index: 10;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+  }
+  
+  .lightbox {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  
+  .lightbox_media_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    border-radius: 0.6rem;
+    overflow: hidden;
+  }
+  
+  .lightbox_media_box img {
+    margin: auto;
+    height: 85%;
+    width: 70%;
+    position: absolute;
+    border-radius: 0.6rem;
+    object-fit: cover;
+  }
+  
+  .fa-angle-right,
+  .fa-angle-left {
+    color: #901c1c;
+    font-size: 3rem;
+  }
+  
+  .fa-times {
+    color: #901c1c;
+    font-size: 2rem;
+  }
+  
+  .arrow_left,
+  .arrow_right,
+  .close_lightbox {
+    position: absolute;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+  }
+  
+  .close_lightbox {
+    right: 12%;
+    top: 8%;
+  }
+  
+  .arrow_left {
+    left: 10%;
+    top: 50%;
+  }
+  
+  .arrow_right {
+    right: 10%;
+    top: 50%;
+  }
