--- a/css/photographer.css
+++ b/css/photographer.css
@@ -295,12 +295,11 @@ function extrait(txt, pos) {
     margin: 20px;
   }
   
-  
   .lightbox_container {
-   /* display: none;*/
+    display: visible;
     position: fixed;
     z-index: 10;
-    background-color: white;
+    background-color: $couleur_blanche;
     width: 100%;
     height: 100%;
     top: 0px;
@@ -312,9 +311,9 @@ function extrait(txt, pos) {
   .lightbox {
     width: 100%;
     height: 100%;
+  
     position: relative;
   }
-  
   .lightbox_media_box {
     display: flex;
     justify-content: center;
@@ -324,25 +323,35 @@ function extrait(txt, pos) {
     margin: auto;
     border-radius: 0.6rem;
     overflow: hidden;
-  }
   
-  .lightbox_media_box img {
-    margin: auto;
-    height: 85%;
-    width: 70%;
+    img,
+    video {
+      margin: auto;
+      height: 85%;
+      width: 70%;
+      position: absolute;
+      border-radius: 0.6rem;
+      object-fit: cover;
+    }
+  }
+  .titre_photo_lightbox {
     position: absolute;
-    border-radius: 0.6rem;
-    object-fit: cover;
+    bottom: 3%;
+    left: 15%;
+    margin: auto;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: $couleur_primaire;
   }
   
-  .fa-angle-right,
-  .fa-angle-left {
-    color: #901c1c;
+  .fa-chevron-right,
+  .fa-chevron-left {
+    color: $couleur_primaire;
     font-size: 3rem;
   }
   
-  .fa-times {
-    color: #901c1c;
+  .close_bigger {
+    color: $couleur_primaire;
     font-size: 2rem;
   }
   
@@ -351,7 +360,7 @@ function extrait(txt, pos) {
   .close_lightbox {
     position: absolute;
     border: none;
-    background-color: white;
+    background-color: $couleur_blanche;
     cursor: pointer;
   }
   
@@ -368,4 +377,12 @@ function extrait(txt, pos) {
   .arrow_right {
     right: 10%;
     top: 50%;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  
+  .lightbox_container.active {
+    display: block;
   }
