--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,10 @@ h1 {
 }
 
 .photographerContainer {
-    display: flex;}
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
    /* grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
     margin-top: 100px;
@@ -43,6 +46,7 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 4rem;
 }
 
 .photographerContainer article h2 {
@@ -61,6 +65,7 @@ h1 {
     object-fit: cover;
     width: 12,5rem;
     height: 12,5rem;
+    align-items: center;
 }
 
 
@@ -95,4 +100,9 @@ h2 {
 .mediaTitle {
     margin-top: 0px;
     margin-bottom: 0px;
+}
+.photographerContainer article a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
