--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ h2 {
 .mediaTitle {
     margin-top: 0px;
     margin-bottom: 0px;
+    color:#901C1C
 }
 .photographerContainer article a{
     display: flex;
