--- a/css/photographer.css
+++ b/css/photographer.css
@@ -55,7 +55,7 @@ button {
    position: fixed;
     z-index: 0; */
     position: fixed;
-    top: 0px; left: 25%;
+    top: 25px; left: 35%;bottom:45px;
     z-index: 1;
 }
 
@@ -149,22 +149,6 @@ photographer.city{
     
 }
 
-/* New 28/02 */
-/*
-.img-portfolio {
-    width: 22rem;
-  height: 19rem;
-  object-fit: cover;
-  border-radius: 0.3rem;
-  border: none;
-  /*background-color: #c4c4c4;
-}
-/*
-.img-portfolio:hover {
-    transition: all 0.5s ease-in-out;
-    transform: scale(1.05);
-}
-*/
 .photographerImages{
     display: flex;
     flex-direction: row;
@@ -174,22 +158,7 @@ photographer.city{
     width: 100%;
     margin: 0 auto;
     justify-content: space-around;
-    
-
-
-   /* flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 0.5rem;
-  width: 22rem;
-  height: 19rem;
-  object-fit: cover;
-  border-radius: 0.3rem;
-  border: none;
-  background-color: #c4c4c4;
-  margin: 0.8rem;
-  justify-content: center;*/
-      /* placer 2 images par ligne */ 
+  
 }
 .media_photographe{
   
@@ -199,12 +168,12 @@ photographer.city{
   flex-wrap: wrap;
   justify-content: space-around;
 }
-/*
-.photographerImages:hover {
-    transition: all 0.5s ease-in-out;
-    transform: scale(1.05);
+
+.photographerWork:hover {
+    transition: all 0.7s ease-in-out;
+    transform: scale(1.03);
 }
-*/
+
 .main {
     justify-content: center;
 }
@@ -259,34 +228,6 @@ function extrait(txt, pos) {
     margin-left: 5px;
 }
 
-
-/*
-.lightbox {
-    /*display: none;!!!!!!
-    width: 100%;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    position: fixed;
-    top: 0px;
-    left: 0px;
-
-}
-.img-lightbox {
-    object-fit: cover;
-    width: 450px;
-    height: 450px;
-
-}
-.fa-angle-left {
-
-}
-.fa-arrows-cross {
-    width: 16px;
-    height: 16px;
-    color: blue;
-    background-color: red;
-}
-*/
 .photographer__selectOption--wraper {
     background-color: #901c1c;
     color: #fafafa;
@@ -454,4 +395,25 @@ function extrait(txt, pos) {
     position: fixed; 
     bottom: 85%;
     right: 5%;
+}
+
+#likes_price {
+  display: flex;
+  position: fixed;
+  border-radius: 0.3rem 0.3rem 0 0;
+  align-items: center;
+  background-color: #db8876;
+  border: none;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 500;
+  right: 2.5rem;
+  bottom: 0;
+  padding: 0.6rem 2rem 0.6rem 2rem;
+}
+.modal_title,
+.photographer__h1 {
+  font-size: 3rem;
+  color: black;
+  font-weight: 400;
 }
